# ticket-reservation

./: .dir-locals.el  .gitignore  LICENSE  default.nix  readme.org  shell.nix  ticket-reservation.cabal
nix/: release.nix
src/: Main.hs  Prompts.hs  TicketSystem.hs  Types.hs
test/: Spec.hs
