cabal-version:       2.4
name:                ticket-reservation
version:             0.1.0.0
synopsis:            Toy project implementation of a theater ticket reservation system using CLI
license:             MIT
license-file:        LICENSE
author:              willbush
maintainer:          will.g.bush@gmail.com

library
  exposed-modules:
      TicketSystem
    , Types
    , Prompts
  build-depends:
      base ^>=4.12.0.0
    , rio >=0.1.9.2
    , say >=0.1.0.0
    , extra
    , split
    , formatting
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

executable tr-exe
  other-modules:
      TicketSystem
    , Types
    , Prompts
  main-is:             Main.hs
  build-depends:
      base ^>=4.12.0.0
    , rio >=0.1.9.2
    , say >=0.1.0.0
    , extra
    , split
    , formatting
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

test-suite tr-test
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  default-language: Haskell2010
  build-depends:
      base ^>=4.12.0.0
    , rio >=0.1.9.2
    , say >=0.1.0.0
    , extra
    , split
    , formatting
    , QuickCheck
    , hspec
    , ticket-reservation
  ghc-options:
    -main-is Spec
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints